--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 </head>
 
 <body>
-    <div id="back_ground"
-        class="absolute m-0 p-0 w-screen h-screen flex justify-center items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700">
-        <nav id="fast_menu"
-            class="fixed w-0 h-full flex justify-center items-center self-start flex-col transition-all bg-gray-200 overflow-hidden">
+    <div id="back_ground" class="absolute m-0 p-0 w-screen h-screen flex justify-start items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700">
+        <nav id="fast_menu" class="fixed w-0 h-full flex justify-center items-center self-start flex-col transition-all bg-gray-200 overflow-hidden">
             <div class="w-56 h-5/6 flex justify-start items-center flex-col border-2 border-solid border-black">
                 <div class="w-full h-14 flex justify-center items-center font-bold">
                     <div class="w-3/12 h-full flex justify-center items-center"></div>
@@ -57,21 +55,34 @@
                 </div>
             </div>
         </nav>
-        <aside class="w-full h-14 flex justify-center items-center bg-gray-200">
-            <div class="w-2/12 h-full flex justify-start items-center">
-                <i id="menu_ham"
-                    class="fa-solid fa-bars ml-5 py-0.5 px-2 text-xl border-2 border-solid border-gray-900 rounded-lg cursor-pointer transition-all hover:bg-gray-300 active:bg-gray-400"></i>
-            </div>
-            <div class="w-8/12 h-full flex justify-center items-center font-bold text-xl">
-                <div class="flex justify-center items-end gap-x-1">
-                    <div class="text-sky-900">Meu</div>
-                    <div class="text-sky-900">Catalogo</div>
-                    <div class="text-amber-600 text-2xl">SQL</div>
+        <menu class="fixed w-full flex justify-center items-center flex-col">
+            <aside class="w-full h-14 flex justify-center items-center bg-gray-200">
+                <div class="w-2/12 h-full flex justify-start items-center">
+                    <i id="menu_ham"
+                        class="fa-solid fa-bars ml-5 py-0.5 px-2 text-xl border-2 border-solid border-gray-900 rounded-lg cursor-pointer transition-all hover:bg-gray-300 active:bg-gray-400"></i>
+                </div>
+                <div class="w-8/12 h-full flex justify-center items-center font-bold text-xl">
+                    <div class="flex justify-center items-end gap-x-1">
+                        <div class="text-sky-900">Meu</div>
+                        <div class="text-sky-900">Catalogo</div>
+                        <div class="text-amber-600 text-2xl">SQL</div>
+                    </div>
+                </div>
+                <div class="w-2/12 h-full flex justify-center items-center"></div>
+            </aside>
+        </menu>
+        <main class="w-full h-full flex justify-center items-center flex-col overflow-auto">
+            <div class="w-full h-56 flex justify-center items-center">
+                <div class="w-1/3 h-full flex justify-center items-end border-2 border-solid border-gray-900">
+                    <div class="">Obras</div>
+                </div>
+                <div class="w-1/3 h-full flex justify-center items-center border-2 border-solid border-gray-900"></div>
+                <div class="w-1/3 h-full flex justify-center items-center border-2 border-solid border-gray-900">
+                    <div class="py-1 px-8 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">Adicionar Obra</div>
                 </div>
             </div>
-            <div class="w-2/12 h-full flex justify-center items-center"></div>
-        </aside>
-        <main></main>
+            <div class="w-full h-dvh flex justify-center items-center border-2 border-solid border-gray-900"></div>
+        </main>
     </div>
 </body>
 
