--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 
 <body>
     <div id="back_ground" class="absolute m-0 p-0 w-screen h-screen flex justify-start items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700">
-        <nav id="fast_menu" class="fixed w-0 h-full flex justify-center items-center self-start flex-col transition-all bg-gray-200 overflow-hidden">
-            <div class="w-56 h-5/6 flex justify-start items-center flex-col border-2 border-solid border-black">
+        <nav id="fast_menu" class="fixed w-0 h-full flex justify-center items-center self-start flex-col drop-shadow-2xl shadow-2xl transition-all bg-gray-200 overflow-hidden z-20">
+            <div class="w-56 h-5/6 flex justify-start items-center flex-col">
                 <div class="w-full h-14 flex justify-center items-center font-bold">
                     <div class="w-3/12 h-full flex justify-center items-center"></div>
                     <div class="w-6/12 h-full flex justify-center items-center">Menu Rápido</div>
                     <div class="w-3/12 h-full flex justify-center items-center">
-                        <i id="menu_arrow"
-                            class="py-2 px-3 fa-solid fa-chevron-left rounded-full transition-all cursor-pointer hover:bg-gray-100 active:bg-gray-300"></i>
+                        <i id="menu_arrow" onclick="fmenu(this)" class="py-2 px-3 fa-solid fa-chevron-left rounded-full transition-all cursor-pointer hover:bg-gray-100 active:bg-gray-300"></i>
                     </div>
                 </div>
                 <div
@@ -55,14 +54,13 @@
                 </div>
             </div>
         </nav>
-        <menu class="fixed w-full flex justify-center items-center flex-col">
+        <menu class="fixed w-full flex justify-center items-center flex-col z-10">
             <aside class="w-full h-14 flex justify-center items-center bg-gray-200">
                 <div class="w-2/12 h-full flex justify-start items-center">
-                    <i id="menu_ham"
-                        class="fa-solid fa-bars ml-5 py-0.5 px-2 text-xl border-2 border-solid border-gray-900 rounded-lg cursor-pointer transition-all hover:bg-gray-300 active:bg-gray-400"></i>
+                    <i id="menu_ham" onclick="fmenu(this)" class="fa-solid fa-bars ml-5 py-0.5 px-2 text-xl border-2 border-solid border-gray-900 rounded-lg cursor-pointer transition-all hover:bg-gray-300 active:bg-gray-400"></i>
                 </div>
                 <div class="w-8/12 h-full flex justify-center items-center font-bold text-xl">
-                    <div class="flex justify-center items-end gap-x-1">
+                    <div class="flex justify-center items-end gap-x-1 drop-shadow-2xl">
                         <div class="text-sky-900">Meu</div>
                         <div class="text-sky-900">Catalogo</div>
                         <div class="text-amber-600 text-2xl">SQL</div>
@@ -71,19 +69,67 @@
                 <div class="w-2/12 h-full flex justify-center items-center"></div>
             </aside>
         </menu>
-        <main class="w-full h-full flex justify-center items-center flex-col overflow-auto">
+        <main class="w-full h-full flex justify-center items-center flex-col overflow-hidden z-0">
             <div class="w-full h-56 flex justify-center items-center">
-                <div class="w-1/3 h-full flex justify-center items-end border-2 border-solid border-gray-900">
-                    <div class="">Obras</div>
+                <div class="w-1/3 h-full flex justify-center items-end">
+                    <div class="text-white font-bold text-2xl drop-shadow-2xl">Obras:</div>
                 </div>
-                <div class="w-1/3 h-full flex justify-center items-center border-2 border-solid border-gray-900"></div>
-                <div class="w-1/3 h-full flex justify-center items-center border-2 border-solid border-gray-900">
-                    <div class="py-1 px-8 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">Adicionar Obra</div>
+                <div class="w-1/3 h-full flex justify-center items-center"></div>
+                <div class="w-1/3 h-full flex justify-start items-end gap-x-2">
+                    <div class="py-1 px-5 pl-4 gap-x-2 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
+                        <i class="fa-solid fa-sliders"></i>
+                        <div>Filtros</div>
+                    </div>
+                    <div class="py-1 px-5 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
+                        Adicionar Obra
+                    </div>
                 </div>
             </div>
-            <div class="w-full h-dvh flex justify-center items-center border-2 border-solid border-gray-900"></div>
+            <div class="w-full h-dvh flex justify-center items-start">
+                <div class="mt-1 p-4 gap-y-5 w-9/12 min-h-96 max-h-full flex justify-start items-start flex-wrap content-start overflow-auto rounded-lg border border-solid border-gray-300">
+                    <div onmouseenter="obra_enter(this)" onmouseleave="obra_leave(this)" class="flex justify-center items-center flex-col px-2 grow">
+                        <div data-bg="1" class="obra w-48 h-64 flex justify-center items-end cursor-pointer transition-all hover:-translate-y-1 drop-shadow-2xl bg-center bg-no-repeat bg-cover bg-[url(https://upload.wikimedia.org/wikipedia/pt/2/2f/6875.jpg)]">
+                            <div class="w-full h-0 px-2 flex justify-start items-start flex-col transition-all overflow-hidden text-white font-bold bg-zinc-800">
+                                <div class="w-full whitespace-nowrap overflow-hidden text-ellipsis">Bob Esponja</div>
+                                <div class="w-full flex justify-between items-center">
+                                    <div>(2023)</div>
+                                    <div>10/10</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-48 h-7 px-5 flex justify-end items-center -translate-y-1 rounded-b-lg bg-zinc-700 transition-all opacity-0">
+                            <div class="px-2 h-full cursor-pointer transition-all hover:text-blue-500 hover:bg-zinc-500 active:bg-zinc-400">
+                                <i class="fa-solid fa-pen"></i>
+                            </div>
+                            <div class="px-2 h-full cursor-pointer transition-all hover:text-red-500 hover:bg-zinc-500 active:bg-zinc-400">
+                                <i class="fa-solid fa-trash"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div onmouseenter="obra_enter(this)" onmouseleave="obra_leave(this)" class="flex justify-center items-center flex-col px-2 grow">
+                        <div data-bg="0" class="obra w-48 flex justify-center items-end cursor-pointer transition-all hover:-translate-y-1 drop-shadow-2xl">
+                            <div class="w-full h-14 py-1 px-2 flex justify-start items-start flex-col overflow-hidden text-white font-bold bg-zinc-800">
+                                <div class="w-full whitespace-nowrap overflow-hidden text-ellipsis">Bob Esponja</div>
+                                <div class="w-full flex justify-between items-center">
+                                    <div>(2023)</div>
+                                    <div>10/10</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-48 h-7 px-5 flex justify-end items-center rounded-b-lg bg-zinc-700 transition-all -translate-y-1">
+                            <div class="px-2 h-full cursor-pointer transition-all hover:text-blue-500 hover:bg-zinc-500 active:bg-zinc-400">
+                                <i class="fa-solid fa-pen"></i>
+                            </div>
+                            <div class="px-2 h-full cursor-pointer transition-all hover:text-red-500 hover:bg-zinc-500 active:bg-zinc-400">
+                                <i class="fa-solid fa-trash"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
