--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div id="back_ground" class="absolute m-0 p-0 w-screen h-screen flex justify-start items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700">
-        <nav id="fast_menu" class="fixed w-0 h-full flex justify-center items-center self-start flex-col drop-shadow-2xl shadow-2xl transition-all bg-gray-200 overflow-hidden z-20">
+    <div id="back_ground" class="absolute m-0 p-0 w-screen h-screen flex justify-start items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700 z-0">
+        <nav id="fast_menu" class="fixed w-0 h-full flex justify-center items-center self-start flex-col drop-shadow-2xl shadow-2xl transition-all bg-gray-200 overflow-hidden z-30">
             <div class="w-56 h-5/6 flex justify-start items-center flex-col">
                 <div class="w-full h-14 flex justify-center items-center font-bold">
                     <div class="w-3/12 h-full flex justify-center items-center"></div>
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </nav>
-        <menu class="fixed w-full flex justify-center items-center flex-col z-10">
+        <menu class="fixed w-full flex justify-center items-center flex-col z-30">
             <aside class="w-full h-14 flex justify-center items-center bg-gray-200">
                 <div class="w-2/12 h-full flex justify-start items-center">
                     <i id="menu_ham" onclick="fmenu(this)" class="fa-solid fa-bars ml-5 py-0.5 px-2 text-xl border-2 border-solid border-gray-900 rounded-lg cursor-pointer transition-all hover:bg-gray-300 active:bg-gray-400"></i>
@@ -69,7 +69,7 @@
                 <div class="w-2/12 h-full flex justify-center items-center"></div>
             </aside>
         </menu>
-        <main class="w-full h-full flex justify-center items-center flex-col overflow-hidden z-0">
+        <main class="w-full h-full flex justify-center items-center flex-col overflow-hidden z-20">
             <div class="w-full h-56 flex justify-center items-center">
                 <div class="w-1/3 h-full flex justify-center items-end">
                     <div class="text-white font-bold text-2xl drop-shadow-2xl">Obras:</div>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-full h-dvh flex justify-center items-start">
+            <div class="w-full h-dvh flex justify-center items-start max-h-[80vh]">
                 <div class="mt-1 p-4 gap-y-5 w-9/12 min-h-96 max-h-full flex justify-start items-start flex-wrap content-start overflow-auto rounded-lg border border-solid border-gray-300">
                     <div onmouseenter="obra_enter(this)" onmouseleave="obra_leave(this)" class="flex justify-center items-center flex-col px-2 grow">
                         <div data-bg="1" class="obra w-48 h-64 flex justify-center items-end cursor-pointer transition-all hover:-translate-y-1 drop-shadow-2xl bg-center bg-no-repeat bg-cover bg-[url(https://upload.wikimedia.org/wikipedia/pt/2/2f/6875.jpg)]">
@@ -116,7 +116,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="w-48 h-7 px-5 flex justify-end items-center rounded-b-lg bg-zinc-700 transition-all -translate-y-1">
+                        <div class="w-48 h-7 px-5 flex justify-end items-center rounded-b-lg bg-zinc-700 transition-all -translate-y-1 opacity-0">
                             <div class="px-2 h-full cursor-pointer transition-all hover:text-blue-500 hover:bg-zinc-500 active:bg-zinc-400">
                                 <i class="fa-solid fa-pen"></i>
                             </div>
@@ -128,6 +128,61 @@
                 </div>
             </div>
         </main>
+    </div>
+    <div id="second_screen">
+        <div class="absolute m-0 p-0 w-screen h-screen flex justify-center items-center flex-col z-50">
+            <div class="w-6/12 h-4/6 flex justify-start items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg">
+                <div class="w-full h-14 px-5 flex justify-between items-center">
+                    <div class="text-white text-2xl font-bold drop-shadow-2xl shadow-2xl">Adicionar Obra</div>
+                    <i class="fa-solid fa-xmark py-1.5 px-2 border border-solid border-gray-900 rounded-full cursor-pointer transition-all hover:bg-red-500 hover:text-white"></i>
+                </div>
+                <div class="w-full h-5/6 flex justify-center items-center border border-solid border-gray-900">
+                    <div class="w-8/12 h-full flex justify-start items-center flex-col border border-solid border-gray-900">
+                        <div class="w-full h-1/6 flex justify-center items-start flex-col pl-8">
+                            <label for="obra_title" class="ml-2 text-white text-base font-bold">Nome da Obra</label>
+                            <input type="text" id="obra_title" name="obra_title" class="w-8/12 py-1.5 px-2 text-sm rounded-lg drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all bg-[rgba(255,255,255,0.5)] border border-solid border-gray-300">
+                        </div>
+                        <div class="w-full h-1/6 flex justify-center items-center">
+                            <div class="w-4/12 h-full flex justify-center items-center flex-col">
+                                <label for="" class="text-white text-base font-bold">Imagem de capa</label>
+                                <div class="w-8/12 h-9 flex justify-center items-center rounded-lg text-white font-bold border border-solid border-gray-300 cursor-pointer">
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s-lg bg-[rgba(255,255,255,0.5)]">Não</div>
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e-lg">Sim</div>
+                                </div>
+                            </div>
+                            <div class="w-8/12 h-full flex justify-center items-start flex-col">
+                                <label for="obra_title" class="ml-2 text-white text-base font-bold">Nome da Obra</label>
+                                <input type="text" id="obra_title" name="obra_title" class="w-9/12 py-1.5 px-2 text-sm rounded-lg drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all bg-[rgba(255,255,255,0.5)] border border-solid border-gray-300">
+                            </div>
+                        </div>
+                        <div class="w-full h-1/6 flex justify-center items-center">
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col border-2 border-solid border-gray-900">
+                                <label for="" class="mr-20 text-white text-base font-bold">Tipo</label>
+                                <div class="w-8/12 h-9 flex justify-center items-center rounded-lg text-white font-bold border border-solid border-gray-300 cursor-pointer">
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s-lg bg-[rgba(255,255,255,0.5)]">Filme</div>
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e-lg">Série</div>
+                                </div>
+                            </div>
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col border-2 border-solid border-gray-900">
+                                <label for="" class="mr-20 text-white text-base font-bold">Tipo</label>
+                                <div class="w-8/12 h-9 flex justify-center items-center rounded-lg text-white font-bold border border-solid border-gray-300 cursor-pointer">
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s-lg bg-[rgba(255,255,255,0.5)]">Filme</div>
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e-lg">Série</div>
+                                </div>
+                            </div>
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col border-2 border-solid border-gray-900">
+                                <label for="" class="mr-20 text-white text-base font-bold">Tipo</label>
+                                <div class="w-8/12 h-9 flex justify-center items-center rounded-lg text-white font-bold border border-solid border-gray-300 cursor-pointer">
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s-lg bg-[rgba(255,255,255,0.5)]">Filme</div>
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e-lg">Série</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-4/12 h-full flex justify-center items-center flex-col border border-solid border-gray-900"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
