--- a/index.html
+++ b/index.html
@@ -131,50 +131,53 @@
     </div>
     <div id="second_screen">
         <div class="absolute m-0 p-0 w-screen h-screen flex justify-center items-center flex-col z-50">
-            <div class="w-6/12 h-4/6 flex justify-start items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg">
+            <div class="w-6/12 h-4/6 flex justify-start items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg bg-[rgba(0,0,0,0.5)]">
                 <div class="w-full h-14 px-5 flex justify-between items-center">
-                    <div class="text-white text-2xl font-bold drop-shadow-2xl shadow-2xl">Adicionar Obra</div>
+                    <div class="text-2xl text-white font-bold drop-shadow-2xl shadow-2xl">Adicionar Obra</div>
                     <i class="fa-solid fa-xmark py-1.5 px-2 border border-solid border-gray-900 rounded-full cursor-pointer transition-all hover:bg-red-500 hover:text-white"></i>
                 </div>
                 <div class="w-full h-5/6 flex justify-center items-center border border-solid border-gray-900">
                     <div class="w-8/12 h-full flex justify-start items-center flex-col border border-solid border-gray-900">
-                        <div class="w-full h-1/6 flex justify-center items-start flex-col pl-8">
-                            <label for="obra_title" class="ml-2 text-white text-base font-bold">Nome da Obra</label>
-                            <input type="text" id="obra_title" name="obra_title" class="w-8/12 py-1.5 px-2 text-sm rounded-lg drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all bg-[rgba(255,255,255,0.5)] border border-solid border-gray-300">
+                        <div class="w-full h-20 flex justify-center items-start flex-col pl-7">
+                            <label for="obra_title" class="ml-2 text-base text-white font-bold">Nome da Obra</label>
+                            <input type="text" id="obra_title" name="obra_title" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
                         </div>
                         <div class="w-full h-1/6 flex justify-center items-center">
-                            <div class="w-4/12 h-full flex justify-center items-center flex-col">
-                                <label for="" class="text-white text-base font-bold">Imagem de capa</label>
-                                <div class="w-8/12 h-9 flex justify-center items-center rounded-lg text-white font-bold border border-solid border-gray-300 cursor-pointer">
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s-lg bg-[rgba(255,255,255,0.5)]">Não</div>
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e-lg">Sim</div>
+                            <div class="w-4/12 h-full flex justify-evenly items-end flex-col border border-solid border-gray-900">
+                                <label for="" class="mr-4 text-base text-white font-bold">Imagem de capa</label>
+                                <div class="mr-4 w-8/12 h-3/6 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s bg-[rgba(255,255,255,0.5)]">Não</div>
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e">Sim</div>
                                 </div>
                             </div>
-                            <div class="w-8/12 h-full flex justify-center items-start flex-col">
-                                <label for="obra_title" class="ml-2 text-white text-base font-bold">Nome da Obra</label>
-                                <input type="text" id="obra_title" name="obra_title" class="w-9/12 py-1.5 px-2 text-sm rounded-lg drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all bg-[rgba(255,255,255,0.5)] border border-solid border-gray-300">
+                            <div class="w-8/12 h-full py-0.5 flex justify-start items-end border border-solid border-gray-900">
+                                <input type="text" id="obra_title" name="obra_title" disabled class="w-9/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Link da Imagem">
                             </div>
                         </div>
-                        <div class="w-full h-1/6 flex justify-center items-center">
-                            <div class="w-1/3 h-full flex justify-center items-center flex-col border-2 border-solid border-gray-900">
-                                <label for="" class="mr-20 text-white text-base font-bold">Tipo</label>
-                                <div class="w-8/12 h-9 flex justify-center items-center rounded-lg text-white font-bold border border-solid border-gray-300 cursor-pointer">
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s-lg bg-[rgba(255,255,255,0.5)]">Filme</div>
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e-lg">Série</div>
+                        <div class="w-full h-20 flex justify-center items-center">
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5 border-2 border-solid border-gray-900">
+                                <label for="" class="text-base text-white font-bold">Gênero da obra</label>
+                                <select name="" id="" class="w-9/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
+                                    <option value="-1" class="text-black font-bold">Selecione</option>
+                                    <option value="0" class="text-black font-bold">1</option>
+                                    <option value="1" class="text-black font-bold">2</option>
+                                    <option value="2" class="text-black font-bold">3</option>
+                                    <option value="3" class="text-black font-bold">4</option>
+                                    <option value="4" class="text-black font-bold">5</option>
+                                </select>
+                            </div>
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5 border-2 border-solid border-gray-900">
+                                <label for="" class="mr-20 text-base text-white font-bold">Tipo</label>
+                                <div class="w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s bg-[rgba(255,255,255,0.5)]">Filme</div>
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e">Série</div>
                                 </div>
                             </div>
-                            <div class="w-1/3 h-full flex justify-center items-center flex-col border-2 border-solid border-gray-900">
-                                <label for="" class="mr-20 text-white text-base font-bold">Tipo</label>
-                                <div class="w-8/12 h-9 flex justify-center items-center rounded-lg text-white font-bold border border-solid border-gray-300 cursor-pointer">
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s-lg bg-[rgba(255,255,255,0.5)]">Filme</div>
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e-lg">Série</div>
-                                </div>
-                            </div>
-                            <div class="w-1/3 h-full flex justify-center items-center flex-col border-2 border-solid border-gray-900">
-                                <label for="" class="mr-20 text-white text-base font-bold">Tipo</label>
-                                <div class="w-8/12 h-9 flex justify-center items-center rounded-lg text-white font-bold border border-solid border-gray-300 cursor-pointer">
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s-lg bg-[rgba(255,255,255,0.5)]">Filme</div>
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e-lg">Série</div>
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5 border-2 border-solid border-gray-900">
+                                <label for="" class="text-base text-white font-bold">Assistido</label>
+                                <div class="w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s bg-[rgba(255,255,255,0.5)]">Não</div>
+                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e">Sim</div>
                                 </div>
                             </div>
                         </div>
