--- a/index.html
+++ b/index.html
@@ -137,7 +137,30 @@
                 <div class="text-2xl text-white font-bold drop-shadow-2xl shadow-2xl"></div>
                 <i class="fa-solid fa-xmark py-2 px-2.5 border border-solid border-white text-white rounded-full cursor-pointer transition-all hover:bg-red-500 hover:border-transparent active:bg-red-400"></i>
             </div>
-            <div class="w-full grow flex justify-center items-center"></div>
+            <div class="w-full grow flex justify-center items-center">
+                <div class="w-2/6 h-full flex justify-center items-start">
+                    <div class="w-5/6 h-4/6 flex justify-center items-center rounded-lg drop-shadow-2xl shadow-2xl bg-cover bg-center bg-no-repeat bg-[url(https://upload.wikimedia.org/wikipedia/pt/2/2f/6875.jpg)]"></div>
+                </div>
+                <div class="w-4/6 h-full flex justify-start items-center flex-col">
+                    <div class="w-full h-12 flex justify-start items-center">
+                        <div class="text-3xl text-gray-200 font-bold drop-shadow-2xl">Bob Esponja</div>
+                    </div>
+                    <div class="w-full h-10 flex justify-start items-center gap-x-16">
+                        <div class="text-md text-gray-200 drop-shadow-2xl"><strong>Tipo:</strong> Filme</div>
+                        <div class="text-md text-gray-200 drop-shadow-2xl"><strong>Status:</strong> Assitido</div>
+                    </div>
+                    <div class="w-full h-10 flex justify-start items-center">
+                        <div class="text-md text-gray-200 drop-shadow-2xl"><strong>Gênero:</strong> Ficção Científica</div>
+                    </div>
+                    <div class="w-full h-10 flex justify-start items-center gap-x-2">
+                        <div class="text-md text-gray-200 drop-shadow-2xl"><strong>Avaliação:</strong></div>
+                        <div class="w-44 h-4/6 flex justify-start items-center drop-shadow-2xl shadow-2xl border-2 border-solid border-white">
+                            <div class="w-full h-full"></div>
+                        </div>
+                    </div>
+                    <div class="w-full grow max-h-56 flex justify-start items-start indent-10 px-2 py-2 text-white overflow-auto"></div>
+                </div>
+            </div>
         </div>
         <div class="w-6/12 h-4/6 hidden justify-start items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg bg-[rgba(0,0,0,0.5)]">
             <div class="w-full h-14 px-5 flex justify-between items-center">
