--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="back_ground" class="absolute m-0 p-0 w-screen h-screen flex justify-start items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700 z-0">
+    <div id="back_ground" data-page_type="0" class="absolute m-0 p-0 w-screen h-screen flex justify-start items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700 z-0">
         <nav id="fast_menu" class="fixed w-0 h-full flex justify-center items-center self-start flex-col drop-shadow-2xl shadow-2xl transition-all bg-gray-200 overflow-hidden z-20">
             <div class="w-56 h-5/6 flex justify-start items-center flex-col">
                 <div class="w-full h-14 flex justify-center items-center font-bold">
@@ -150,7 +150,7 @@
                         <input type="text" id="obra_title" name="obra_title" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
                     </div>
                     <div class="w-full h-1/6 flex justify-center items-center">
-                        <div class="w-4/12 h-full flex justify-center gap-y-1 items-center flex-col">
+                        <div data-option_num="0" class="w-4/12 h-full flex justify-center gap-y-1 items-center flex-col">
                             <label for="" class="mr-4 text-base text-white font-bold">Imagem de capa</label>
                             <div id="image_selector" data-option_num="0" class="mr-4 w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
                                 <div onclick="option_change(this)" data-option_num="0" class="w-1/2 h-full flex justify-center items-center rounded-s transition-all bg-[rgba(255,255,255,0.5)]">Não</div>
@@ -173,14 +173,14 @@
                                 <option value="4" class="text-black font-bold">5</option>
                             </select>
                         </div>
-                        <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
+                        <div data-option_num="0" class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
                             <label for="" class="mr-20 text-base text-white font-bold">Tipo</label>
                             <div data-option_num="0" class="w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
                                 <div onclick="option_change(this)" data-option_num="0" class="w-1/2 h-full flex justify-center items-center rounded-s transition-all bg-[rgba(255,255,255,0.5)]">Filme</div>
                                 <div onclick="option_change(this)" data-option_num="1" class="w-1/2 h-full flex justify-center items-center rounded-e transition-all">Série</div>
                             </div>
                         </div>
-                        <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
+                        <div data-option_num="0" class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
                             <label for="" class="text-base text-white font-bold">Assistido</label>
                             <div data-option_num="0" class="w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
                                 <div onclick="option_change(this)" data-option_num="0" class="w-1/2 h-full flex justify-center items-center rounded-s transition-all bg-[rgba(255,255,255,0.5)]">Não</div>
