--- a/rating.html
+++ b/rating.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="back_ground" class="absolute m-0 p-0 w-screen h-screen flex justify-start items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700 z-0">
+    <div id="back_ground" data-page_type="2" class="absolute m-0 p-0 w-screen h-screen flex justify-start items-center flex-col bg-gradient-to-t from-blue-800 to-cyan-700 z-0">
         <nav id="fast_menu" class="fixed w-0 h-full flex justify-center items-center self-start flex-col drop-shadow-2xl shadow-2xl transition-all bg-gray-200 overflow-hidden z-20">
             <div class="w-56 h-5/6 flex justify-start items-center flex-col">
                 <div class="w-full h-14 flex justify-center items-center font-bold">
@@ -69,7 +69,7 @@
         <main class="w-full h-full flex justify-center items-center flex-col overflow-hidden z-0">
             <div class="w-full h-56 flex justify-center items-center">
                 <div class="w-1/3 h-full flex justify-center items-end">
-                    <div class="text-white font-bold text-2xl drop-shadow-2xl">Obras:</div>
+                    <div class="text-white font-bold text-2xl drop-shadow-2xl">Avaliações:</div>
                 </div>
                 <div class="w-1/3 h-full flex justify-center items-center"></div>
                 <div class="w-1/3 h-full flex justify-start items-end gap-x-2">
@@ -84,25 +84,18 @@
             </div>
             <div class="w-full h-dvh flex justify-center items-start max-h-[80vh]">
                 <div id="elements_list" class="mt-1 p-4 gap-y-5 w-9/12 min-h-96 max-h-full flex justify-start items-start flex-wrap content-start overflow-auto rounded-lg border border-solid border-gray-300">
-                    <div onmouseenter="obra_enter(this)" onmouseleave="obra_leave(this)" class="flex justify-center items-center flex-col px-2 grow">
-                        <div data-bg="1" class="obra w-48 h-64 flex justify-center items-end cursor-pointer transition-all hover:-translate-y-1 drop-shadow-2xl bg-center bg-no-repeat bg-cover bg-[url(https://upload.wikimedia.org/wikipedia/pt/2/2f/6875.jpg)]">
-                            <div class="w-full h-0 px-2 flex justify-start items-start flex-col transition-all overflow-hidden text-white font-bold bg-zinc-800">
-                                <div class="w-full whitespace-nowrap overflow-hidden text-ellipsis">Bob Esponja</div>
-                                <div class="w-full flex justify-between items-center">
-                                    <div>(2023)</div>
-                                    <div>10/10</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="w-48 h-7 px-5 flex justify-end items-center -translate-y-1 rounded-b-lg bg-zinc-700 transition-all opacity-0">
-                            <div class="px-2 h-full cursor-pointer transition-all hover:text-blue-500 hover:bg-zinc-500 active:bg-zinc-400">
-                                <i class="fa-solid fa-pen"></i>
-                            </div>
-                            <div class="px-2 h-full cursor-pointer transition-all hover:text-red-500 hover:bg-zinc-500 active:bg-zinc-400">
-                                <i class="fa-solid fa-trash"></i>
-                            </div>
-                        </div>
-                    </div>
+                    <table class="w-full border-collapse">
+                        <thead class="h-9 bg-[rgba(255,255,255,0.8)]">
+                            <tr>
+                                <th class="w-1/12">ID</th>
+                                <th class="w-1/12">Nota</th>
+                                <th class="w-1/12">ID da Obra</th>
+                                <th class="w-1/12"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </main>
