--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="w-8/12 h-full flex justify-start items-center flex-col">
                     <div class="w-full h-20 flex justify-center items-start flex-col pl-7">
                         <label for="obra_title" class="ml-2 text-base text-white font-bold">Nome da Obra</label>
-                        <input type="text" id="obra_title" name="obra_title" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
+                        <input type="text" onblur="input_verifyer(this)" data-type="0" id="obra_title" name="obra_title" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
                     </div>
                     <div class="w-full h-1/6 flex justify-center items-center">
                         <div data-option_num="0" class="w-4/12 h-full flex justify-center gap-y-1 items-center flex-col">
@@ -158,13 +158,13 @@
                             </div>
                         </div>
                         <div class="w-8/12 h-full py-0.5 flex justify-start items-end ">
-                            <input type="text" onblur="image_selector(this)" id="obra_title" name="obra_title" disabled class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Link da Imagem">
+                            <input type="text" onblur="input_verifyer(this)" data-type="0" onblur="image_selector(this)" id="obra_title" name="obra_title" disabled class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Link da Imagem">
                         </div>
                     </div>
                     <div class="w-full h-1/6 flex justify-center items-center">
                         <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
                             <label for="" class="text-base text-white font-bold">Gênero da obra</label>
-                            <select id="genre_select" class="w-9/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
+                            <select onblur="input_verifyer(this)" data-type="2" id="genre_select" class="w-9/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
                                 <option value="-1" class="text-black font-bold">Selecione</option>
                                 <option value="0" class="text-black font-bold">1</option>
                                 <option value="1" class="text-black font-bold">2</option>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="w-full flex justify-start items-start flex-col pl-5 gap-y-1 grow">
                         <label for="" class="ml-2 text-base text-white font-bold">Sinopse</label>
-                        <textarea name="" id="" class="w-9/12 h-4/6 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
+                        <textarea onblur="input_verifyer(this)" data-type="0" name="" id="" class="w-9/12 h-4/6 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
                     </div>
                 </div>
                 <div class="w-4/12 h-full flex justify-center items-center flex-col">
@@ -218,7 +218,7 @@
         <div class="w-3/12 h-36 hidden justify-center items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg bg-[rgba(0,0,0,0.5)]">
             <div class="w-full h-4/6 flex justify-evenly items-center flex-col px-5 break-all text-base text-white font-bold drop-shadow-2xl">
                 <label for="" class="self-start text-white text-lg font-bold">Adicionar Gênero</label>
-                <input type="text" class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Nome do gênero">
+                <input type="text" onblur="input_verifyer(this)" data-type="0" class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Nome do gênero">
             </div>
             <div class="w-full h-2/6 flex justify-evenly items-center">
                 <div onclick="genre_submit(this)" id="genre_cancel" data-submit="0" class="w-4/12 h-9 flex justify-center items-center text-white font-bold rounded-sm drop-shadow-2xl shadow-2xl cursor-pointer transition-all hover:bg-gray-400 hover:border-0 active:bg-gray-500 border border-solid border-gray-300">Cancelar</div>
@@ -235,7 +235,7 @@
                     <div class="w-full h-1/6 flex justify-center items-center">
                         <div class="w-4/6 h-full flex justify-center items-center flex-col gap-y-0.5">
                             <label for="" class="self-start ml-11 text-base text-white font-bold">Nome da Obra</label>
-                            <select id="genre_select" class="w-10/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
+                            <select onblur="input_verifyer(this)" data-type="2" id="genre_select" class="w-10/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
                                 <option value="-1" class="text-black font-bold">Selecione</option>
                                 <option value="0" class="text-black font-bold">1</option>
                                 <option value="1" class="text-black font-bold">2</option>
@@ -246,12 +246,12 @@
                         </div>
                         <div class="w-2/6 h-full flex justify-center items-start flex-col gap-y-0.5">
                             <label for="" class="ml-1 text-base text-white font-bold">Avaliação (0 - 100)</label>
-                            <input type="number" id="obra_title" min="0" max="100" name="obra_title" class="w-10/12 h-9 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" value="0">
+                            <input type="number" onblur="input_verifyer(this)" data-type="0" id="obra_title" min="0" max="100" name="obra_title" class="w-10/12 h-9 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" value="0">
                         </div>
                     </div>
                     <div class="w-full flex justify-start items-start flex-col pl-5 gap-y-1 grow">
                         <label for="" class="ml-2 text-base text-white font-bold">Avaliação Escrita</label>
-                        <textarea name="" id="" class="w-9/12 h-3/6 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
+                        <textarea onblur="input_verifyer(this)" data-type="0" name="" id="" class="w-9/12 h-3/6 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
                     </div>
                 </div>
                 <div class="w-4/12 h-full flex justify-center items-center flex-col">
